# AutoTalks

./: .gitignore  INSTALLATION.MD  README.MD  main.py  main_w_kboard.py  merger.py  pyproject.toml  realtimepro.py  test.json
components/: chunk_generator.py  transcript_matcher.py
data/chunks/: betul.json  elif.json  hacer.json  mikey.json  yasin.json
data/transcripts/: betul.json  elif.json  hacer.json  mikey.json  yasin.json
tests/: test_cuda_torch.py
