[project]
name = "autotalks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "nanoid>=2.0.0",
    "orjson>=3.10.18",
    "psutil>=7.0.0",
    "pydantic>=2.11.4",
    "pygetwindow>=0.0.9",
    "pypdf>=5.4.0",
    "pywinauto>=0.6.9",
    "rapidfuzz>=3.13.0",
    "selenium>=4.32.0",
]
